feat(#178): finish with refactoring of XmlInstruction comparision